[package]
name = "k-nucleotide"
version = "0.1.0"
authors = ["danglotb <bdanglot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.20"
futures-cpupool = "0.1.8"
ordermap = "0.4.2"

[profile.dev]
opt-level = 3
